force-app/main/default/objects/D2C_VTO_POS_Session__c/D2C_VTO_POS_Session__c.object-meta.xml
<CustomObject>
    <label>POS Session</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>POS Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>