force-app/main/default/objects/D2C_VTO_POS_Session__c/fields/D2C_VTO_Closed_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>D2C_VTO_Closed_Time_Stamp__c</fullName>
    <description>This field helps to identify at what time the POS Session was updated to “Closed” status</description>
    <label>Session Closed Time Stamp</label>
    <type>DateTime</type>
</CustomField>