force-app/main/default/objects/D2C_VTO_POS_Session__c/fields/D2C_VTO_Session_In_Progress_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>D2C_VTO_Session_In_Progress_Time_Stamp__c</fullName>
    <description>This field helps to identify at what time the POS Session was updated to “In Progress” status</description>
    <label>Session In Progress Time Stamp</label>
    <type>DateTime</type>
</CustomField>