force-app/main/default/objects/D2C_VTO_POS_Session__c/fields/D2C_VTO_Session_Open_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>D2C_VTO_Session_Open_Time_Stamp__c</fullName>
    <description>This field helps to identify at what time the POS Session was created with Open status</description>
    <label>Session Open Time Stamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>