force-app/main/default/objects/D2C_VTO_POS_Session__c/fields/D2C_VTO_Status__c.field-meta.xml
<CustomField>
    <fullName>D2C_VTO_Status__c</fullName>
    <description>This field helps to identify whether the POS Session is open, in progress or closed.</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>